Add bash scripts