@@ -1,10 +1,19 @@
--Xms768m
--Xmx768m
--XX:MaxPermSize=250m
+-Xms512m
+
+-Xmx1024m
+
+-XX:MaxPermSize=350m
+
 -XX:ReservedCodeCacheSize=64m
--server
--XX:NewSize=128m
--XX:+UseParNewGC
--XX:ParallelGCThreads=4
--XX:+UseConcMarkSweepGC
--XX:CMSInitiatingOccupancyFraction=60
+
+-XX:NewRatio=9
+
+-XX:SurvivorRatio=3
+
+-XX:+UseParallelOldGC
+
+-XX:+TieredCompilation
+
+-Dfile.encoding=UTF-8
+
+-ea
